Account for multiple , isolated, instances of the RegexBuilder

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <script data-builder>RegexBuilder.Init()</script>
+        <script data-builder>RegexBuilder.Init()</script>
     </body>
 </html>
