Rewritten to be a class instead, which can be instanced. If there are more than one RegexBuilder, it'll be isolated from the other.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <script src="./main.js"></script>
     </head>
     <body>
-        <script data-builder>RegexBuilder.Init()</script>
-        <script data-builder>RegexBuilder.Init()</script>
+        <script data-builder>new RegexBuilder()</script>
     </body>
 </html>
