Dragging new node and editing a nodes content now work again. Elements in css redone with flex positioning. Started dynamic sizing to parent element and scrollbar styling as an attempt to control overflow tastefully without needing to wrap or grow the size of the element.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <script src="./main.js"></script>
     </head>
     <body>
-        <script data-builder>new RegexBuilder()</script>
+        <div id="builder-container"><script data-builder>new RegexBuilder()</script></div>
     </body>
 </html>
